Sean - fixed menu centre align

--- a/style.css
+++ b/style.css
@@ -73,13 +73,18 @@ a.work-link{
 
 #nav {
   list-style-type: none;
-  margin: 0;
+  display: table;
+  margin: 0 auto;
   padding: 0;
   overflow: hidden;
   background-color: #222629;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
+}
+
+ul.nav {
+  list-style-type: none;
 }
 
 li.nav {
